[project]
name = "selene-pytest-project"
version = "0.1.0"
description = "Learning project: pytest + selene + poetry"
authors = [
    {name = "Nataly Kostiuchenko",email = "natcheshirecats@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "selene (>=1.0.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "selene_pytest_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.2,<5.0.0)"
]
